Aula Css-parte1

--- a/modulo1/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/template-loja/add-produto.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="add-produto.css">
     <title>Adicionar Produto</title>
-</head>
+</head
+
+
+
+
+>
 <body>
-    <div>
-        <p>LacePet</p>
+    <header>
+    <div class="logodaPetLace4">
+        <img src="./pets.img/logopetlace.png" alt="pet lace logo">  
     </div>
     
-    <div>
+    <div class="comandos">
         <a href="../template-loja/index.html">Página Inicial</a>
         <a href="../template-loja/ctrl-estoque.html">Controle de Estoque</a>
         <a href="../template-loja/add-produto.html">Adicionar Produto</a>
         <a href="../template-loja/funcionarios.html">Funcionários</a>
     </div>
+   </header>
 
-    
+    <main>
     <h2>Adicionar Produto Para O Seu Pet:</h2>
     <form action="">
         <div>
@@ -41,11 +49,14 @@
             <input type="number" id="quantidade-disponivel" name="qunatidade">
         </div>
 
-        <div class="form-add">
+        <div class="button">
             <button type="submit">Adicionar</button>
         </div>
 
     </form>
+    </main> 
+    <footer>
 
+    </footer>
 </body>
 </html>
