Header e footer alinhados e definidos

--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -12,15 +12,62 @@
 <body>
     <header>
         <div class="cabecalho">
-
+            <div class="inconescabecalho">
+                <img src="./img/bolinho.png" alt="icon de bolo">
+                <h2>Confeitaria</h2>
+                <button>Login</button>
+            </div>
         </div>
     </header>
     <main>
-        <div class="menulateral"></div>
-        <div></div>
+       <!-- <nav>
+           <div class="menu">
+            <img id="home" src="./img/casinha.png" alt="">
+            <img id="docinho" src="./img/docinho.png" alt="">
+            <img id="carrinho" src="./img/carrinho.png" alt="">
+            <img id="perfil" src="./img/perfil(zinho).webp" alt="">
+           </div>
+           <div class="nome">
+
+           </div>
+           <div class="setas">
+               <img src="./img/setinhadireita.png" alt="">
+               <img src="./img/setinhadireita.png" alt="">
+               <img src="./img/setinhadireita.png" alt="">
+               <img src="./img/setinhadireita.png" alt="">
+           </div>
+       </nav>
+       <section>
+            <div class="fotos1">
+                <div class="foto1"><img src="./img/bolobonito.jpg" alt="bolo bonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br>molhadinho decorado com morangos</p></div>
+                <div class="foto2"><img src="./img/bolobonito.jpg" alt="bolo bonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+                <div class="foto3"><img src="./img/bolobonito.jpg" alt="bolobonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+                <div class="foto4"><img src="./img/bolobonito.jpg" alt="bolobonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+                <div class="foto5"><img src="./img/bolobonito.jpg" alt="bolobonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+                <div class="foto6"><img src="./img/bolobonito.jpg" alt="bolobonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+                <div class="foto7"><img src="./img/bolobonito.jpg" alt="bolobonito">
+                    <h1>Bolo de chocolate</h1><p>Delicioso bolo de chocolate
+                        <br> molhadinho decorado com morangos</p></div>
+            </div>
+           
+       </section> -->
+        
     </main>
     <footer>
         <div class="rodape">
+            <h3>Bolos deliciosos feitos com muito carinho <3</h3>
 
         </div>
     </footer>
