--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-       <!-- <!-- <nav>
+       <nav>
            <div class="menu">
             <img id="home" src="./img/casinha.png" alt="">
             <img id="docinho" src="./img/docinho.png" alt="">
@@ -36,7 +36,7 @@
                <img src="./img/setinhadireita.png" alt="">
                <img src="./img/setinhadireita.png" alt="">
            </div>
-       </nav> -->
+       </nav> 
        <section>
             <div class="fotos1">
                 <div class="foto1"><img src="./img/bolobonito.jpg" alt="bolo bonito">
