botão alinhado e icones e descrição do nav adicionados

--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -21,21 +21,28 @@
     </header>
     <main>
        <nav>
-           <div class="menu">
-            <img id="home" src="./img/casinha.png" alt="">
-            <img id="docinho" src="./img/docinho.png" alt="">
-            <img id="carrinho" src="./img/carrinho.png" alt="">
-            <img id="perfil" src="./img/perfil(zinho).webp" alt="">
-           </div>
-           <div class="nome">
-
-           </div>
-           <div class="setas">
-               <img src="./img/setinhadireita.png" alt="">
-               <img src="./img/setinhadireita.png" alt="">
-               <img src="./img/setinhadireita.png" alt="">
-               <img src="./img/setinhadireita.png" alt="">
-           </div>
+        <div class="menu">
+            <div class="inconescabecalho">
+                <img src="./img/casinha.png" alt="icon de bolo">
+                <h2>HOME</h2>     
+                <img id="setinha" src="./img/setinhadireita.png" alt="setinha">
+            </div>
+            <div class="inconescabecalho">
+                <img src="./img/docinho.png" alt="icon de doce">
+                <h2>DOCES</h2>     
+                <img id="setinha" src="./img/setinhadireita.png" alt="setinha">
+            </div>
+            <div class="inconescabecalho">
+                <img src="./img/carrinho.png" alt="icon de carrinho">
+                <h2>CARRINHO</h2>     
+                <img id="setinha" src="./img/setinhadireita.png" alt="setinha">
+            </div>
+            <div class="inconescabecalho">
+                <img src="./img/perfil(zinho).webp" alt="icon de perfil">
+                <h2>PERFIL</h2>     
+                <img id="setinha" src="./img/setinhadireita.png" alt="setinha">
+            </div>
+        </div>
        </nav> 
        <section>
             <div class="fotos1">
