elementos centralizados,videos carregados e links todos funcionando

--- a/modulo1/flex-grid-pratica/video1.html
+++ b/modulo1/flex-grid-pratica/video1.html
@@ -7,25 +7,19 @@
     <link rel="stylesheet" type="text/css" href="video1.css">
     <title>NOME DO VIDEO</title>
 </head>
-
 <body>
     <header class="cabecalho1">
         <h1>FutureTube</h1>
        <a href="./index.html"><button>Voltar</button></a> 
-
     </header>
     <main>
-        
         <section>
-            <h2>titulo do video</h2>
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4" autoplay loop title="video"></video>
-
+            <h2>Irlanda Bonita</h2>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" autoplay loop title="Relaxandoo"></video>
         </section>
     </main>
-    <footer class="rodape2">
-
+    <footer class="rodape1">
+        <h2>Espero que tenha gostado de assistir a irlanda bonita.</h2>
     </footer>
-
-    
 </body>
 </html>
