imagens ajustadas e alinhadas

--- a/modulo1/flex-grid-pratica/video1.html
+++ b/modulo1/flex-grid-pratica/video1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="video1.css">
-    <title>NOME DO VIDEO</title>
+    <title>Video Irlanda Bonita</title>
 </head>
 <body>
     <header class="cabecalho1">
@@ -14,7 +14,6 @@
     </header>
     <main>
         <section>
-            <h2>Irlanda Bonita</h2>
             <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" autoplay loop title="Relaxandoo"></video>
         </section>
     </main>
