--- a/modulo1/flex-grid-pratica/video6.html
+++ b/modulo1/flex-grid-pratica/video6.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="video4.css">
-    <title>Video Praia Bonita</title>
+    <link rel="stylesheet" type="text/css" href="video6.css">
+    <title>Video Coelho comendo</title>
 </head>
 
 <body>
-    <header class="cabecalho4">
+    <header class="cabecalho6">
         <h1>FutureTube</h1>
         <a href="./index.html"><button>Voltar</button></a>
 
     </header>
     <main>
         <section>
-            
-            <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4" autoplay loop title="praia bonita"></video>
+            <video src="https://storage.googleapis.com/future-apis.appspot.com/6.mp4" autoplay loop title="Coelhinho"></video>
 
         </section>
     </main>
-    <footer class="rodape4">
-        <h2>Espero que tenha gostado de assistir a Praia Bonita.</h2>
+    <footer class="rodape6">
+        <h2>Espero que tenha gostado de assistir a coelho comendo.</h2>
 
     </footer>
 </body>
